--- a/src/MainModule/LoginView.xaml
+++ b/src/MainModule/LoginView.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
     <Grid>
-            
+            <TextBlock Text="Hello" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center">     </TextBlock>
     </Grid>
 </UserControl>
