--- a/src/MainModule/LoginView.xaml
+++ b/src/MainModule/LoginView.xaml
@@ -2,11 +2,44 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:MainModule"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:components="clr-namespace:WindowsParty.App.Components;assembly=WindowsParty.App.Components"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            <TextBlock Text="Hello" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center">     </TextBlock>
-    </Grid>
+
+
+
+    <UserControl.Resources>
+        <ResourceDictionary>
+
+
+            <Style x:Key="LoginViewStyle" TargetType="ContentPresenter">
+                <Setter Property="Content">
+                    <Setter.Value>
+                        <Grid Height="630" Width="800">
+                            <TextBlock Text="Hello" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" />
+                        </Grid>
+                    </Setter.Value>
+                </Setter>
+            </Style>
+
+
+        </ResourceDictionary>
+    </UserControl.Resources>
+    
+    <ContentControl>
+        <components:ApplicationContentControl>
+            <components:ApplicationContentControl.AppContent>
+                <ContentPresenter Style="{StaticResource LoginViewStyle}"></ContentPresenter>
+
+            </components:ApplicationContentControl.AppContent>
+        </components:ApplicationContentControl>
+    </ContentControl>
 </UserControl>
+
+
+
+
+
+
+
