--- a/src/WindowsParty.App/Shell.xaml
+++ b/src/WindowsParty.App/Shell.xaml
@@ -1,15 +1,18 @@
 ﻿<Window x:Class="WindowsParty.App.Shell"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:regions="http://prismlibrary.com/"
-    xmlns:inf="clr-namespace:WindowsParty.Infrastructure;assembly=WindowsParty.Infrastructure"
-    Title="Shell" Height="300" Width="300">
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:prism="http://www.codeplex.com/prism"
+
+        xmlns:inf="clr-namespace:WindowsParty.Infrastructure;assembly=WindowsParty.Infrastructure"
+        Title="Shell"
+        Width="800"
+        Height="630" >
     <Window.Resources>
 
     </Window.Resources>
     <Viewbox Stretch="Fill">
 
-        <ContentControl regions:RegionManager.RegionName= "{x:Static inf:Regions.MainRegion}" />
+        <ContentControl prism:RegionManager.RegionName= "{x:Static inf:Regions.MainRegion}" />
 
     </Viewbox>
 </Window>
