--- a/src/MainModule/ServersView.xaml
+++ b/src/MainModule/ServersView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:MainModule"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+    <Grid VerticalAlignment="Center" HorizontalAlignment="Center">
+            <TextBlock Text="Servers!" FontSize="40"/>
     </Grid>
 </UserControl>
