Partial Acceptance test fix. TitleResolver.

--- a/src/MainModule/LoginView.xaml
+++ b/src/MainModule/LoginView.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:components="clr-namespace:WindowsParty.App.Components;assembly=WindowsParty.App.Components"
              xmlns:inf="clr-namespace:WindowsParty.Infrastructure;assembly=WindowsParty.Infrastructure"
              xmlns:mainModule="clr-namespace:MainModule"
+             xmlns:controls="clr-namespace:WindowsParty.App.Components.Controls;assembly=WindowsParty.App.Components"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="300"
              d:DataContext="{d:DesignInstance mainModule:LoginViewModel}">
@@ -30,10 +30,10 @@
     </UserControl.Resources>
 
     <ContentControl>
-        <components:ApplicationContentControl>
-            <components:ApplicationContentControl.AppContent>
+        <controls:ApplicationContentControl>
+            <controls:ApplicationContentControl.AppContent>
                 <ContentPresenter Style="{StaticResource LoginViewStyle}" />
-            </components:ApplicationContentControl.AppContent>
-        </components:ApplicationContentControl>
+            </controls:ApplicationContentControl.AppContent>
+        </controls:ApplicationContentControl>
     </ContentControl>
 </UserControl>
