--- a/src/WindowsParty.App.Theme.Base/Controls/ApplicationContentControl.xaml
+++ b/src/WindowsParty.App.Theme.Base/Controls/ApplicationContentControl.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:controls="clr-namespace:WindowsParty.App.Components;assembly=WindowsParty.App.Components">
+                    xmlns:controls="clr-namespace:WindowsParty.App.Components.Controls;assembly=WindowsParty.App.Components"
+                    >
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/WindowsParty.App.Theme.Base;component/Dimensions.xaml"/>
