--- a/src/MainModule/LoginView.xaml
+++ b/src/MainModule/LoginView.xaml
@@ -17,6 +17,24 @@
                 <Setter Property="Content">
                     <Setter.Value>
                         <StackPanel>
+                            <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <TextBlock Grid.Column="0" Grid.Row="0" 
+                                           Text="Username: " Margin="10"/>
+                                <TextBlock Grid.Column="0" Grid.Row="1"
+                                           Text="Password: " Margin="10"/>
+                                <TextBox Grid.Column="1" Grid.Row="0"
+                                         Text="{Binding Username}" Margin="10"/>
+                                <TextBox Grid.Column="1" Grid.Row="1"
+                                         Text="{Binding Password}" Margin="10"/>
+                            </Grid>
                             <Button Content="Login!" AutomationProperties.AutomationId="{x:Static inf:AutomationIds.LoginButton}"
                                     Command="{Binding LoginCommand}"/>
 
