--- a/src/MainModule/LoginView.xaml
+++ b/src/MainModule/LoginView.xaml
@@ -16,9 +16,9 @@
             <Style x:Key="LoginViewStyle" TargetType="ContentPresenter">
                 <Setter Property="Content">
                     <Setter.Value>
-                        <StackPanel>
                             <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
                                 <Grid.RowDefinitions>
+                                    <RowDefinition/>
                                     <RowDefinition/>
                                     <RowDefinition/>
                                 </Grid.RowDefinitions>
@@ -30,16 +30,28 @@
                                            Text="Username: " Margin="10"/>
                                 <TextBlock Grid.Column="0" Grid.Row="1"
                                            Text="Password: " Margin="10"/>
+                                <TextBlock Grid.Column="0" Grid.Row="2"
+                                           Text="Though shalt not err!" Margin="10" Foreground="Red">
+                                    <TextBlock.Style>
+                                        <Style TargetType="TextBlock">
+                                            <Setter Property="Visibility" Value="Hidden"/>
+                                            <Style.Triggers>
+                                                <DataTrigger Binding="{Binding ErrorOccurred}" Value="true">
+                                                    <Setter Property="Visibility" Value="Visible"/>
+                                                </DataTrigger>
+                                            </Style.Triggers>
+                                        </Style>
+                                    </TextBlock.Style>
+                                </TextBlock>
                                 <TextBox Grid.Column="1" Grid.Row="0"
-                                         Text="{Binding Username}" Margin="10"/>
+                                         Text="{Binding Username}" Margin="10" Width="150"/>
                                 <TextBox Grid.Column="1" Grid.Row="1"
-                                         Text="{Binding Password}" Margin="10"/>
-                            </Grid>
-                            <Button Content="Login!" AutomationProperties.AutomationId="{x:Static inf:AutomationIds.LoginButton}"
+                                         Text="{Binding Password}" Margin="10" Width="150"/>
+                                <Button  Grid.Column="1" Grid.Row="2"
+                                         Content="Login!" AutomationProperties.AutomationId="{x:Static inf:AutomationIds.LoginButton}" Margin="10"
                                     Command="{Binding LoginCommand}"/>
+                            </Grid>
 
-                            <TextBlock Text="Hello" FontSize="40" HorizontalAlignment="Center" VerticalAlignment="Center" />
-                        </StackPanel>
                     </Setter.Value>
                 </Setter>
             </Style>
